<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.createAccount">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/createascrollview">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="snapMargins|scroll|enterAlways|exitUntilCollapsed|snap"
            android:overScrollMode="ifContentScrolls"
            android:splitMotionEvents="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="?colorOnBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lottieAnimationView"
                    android:layout_width="match_parent"
                    android:layout_height="340dp"
                    android:layout_marginBottom="10dp"
                    android:scaleType="centerInside"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/signup" />

                <TextView
                    android:id="@+id/login_login3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="Start an end to end encrypted journey today, no need to fear of hackers or interceptions"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.core.widget.NestedScrollView
        android:id="@+id/createascrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_account_create"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_enteremail_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_enter_email"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_enteremail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:inputType="textWebEmailAddress|textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHighlight="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textColorLink="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_enterusername_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_enter_username"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_enterusername"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:inputType="textWebEmailAddress|textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHighlight="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textColorLink="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_enterphone_parent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Enter Phone Number"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="true"
                    app:hintEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_enterphone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:inputType="number|phone"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHighlight="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textColorLink="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_createpassword_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_create_password"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="true"
                    app:helperText="Password Must Be at Least 6 Characters Long"
                    app:helperTextEnabled="true"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_createpassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:inputType="textPassword"
                        android:password="true"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHighlight="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textColorLink="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/signup_verifypassword_parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/signup_verify_password"
                    android:textColorHint="@color/colorWhite"
                    app:errorEnabled="true"
                    app:helperTextEnabled="true"
                    app:hintEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorWhite">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signup_verifypassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/black"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHighlight="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textColorLink="@color/colorWhite" />
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/create_createbutton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/create_account_create"
                    app:cornerRadius="10dp"
                    app:elevation="7dp" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>